2000-12-25  Pavel Roskin  <proski@gnu.org>

	* autoreconf.sh: s/localddir/localdir/.
	Reported by Motoyuki Kasahara.

2000-12-23  Akim Demaille  <akim@epita.fr>

	* autoconf.sh: Promote `configure.ac' over `configure.in'.
	* autoreconf.sh: Likewise.
	* autoheader.sh: Ditto.
	* autoupdate.sh: Similarly.
	* doc/autoconf.texi: Adjust.
	* tests/atspecific.m4: Be sure to remove configure.in.
	Adjust the test suite to use `configure.ac'.

2000-12-22  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_EVAL, AC_TRY_EVAL, AC_TRY_COMMAND): Be a
	single statement, so that one can make pipes with AC_TRYs, just as
	in 2.13.

2000-12-20  Lars J. Aas  <larsa@sim.no>

	* aclang.m4 (_AC_COMPILER_OBJEXT, _AC_COMPILER_EXEEXT_O):
	Make the order of arguments for ls count by splitting the ls
	command into a sequence of ls commands.

2000-12-20  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_LANG_COMPILER_GNU): Be sure to have `choke me' on
	the seventh column so that the SGI Fortran compiler really chokes
	on it.
	From Ezra Peisach.

2000-12-20  Akim Demaille  <akim@epita.fr>

	* tests/foreign.at (Autoconf & Libtool): Ignore Libtool version
	1.3.[0-5].
	* tests/compile.at (GNU Fortran 77): Use AS_EXIT.

2000-12-20  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_CLEANUP_FILE_IFELSE): Fix the regexp: the
	pattern ` state* ' was added many times for `*' was improperly
	escaped.
	(AT_INIT): Remove the data files before running the tests.
	Define AT_data_files and output it.
	(AT_SETUP): Don't.
	(_m4_divert(TEST)): Remove, now useless.

2000-12-20  Akim Demaille  <akim@epita.fr>

	* aclang.m4: `dnl' the AC_LANG_PUSH and AC_LANG_POP.
	(AC_PROG_CXXCPP, AC_PROG_CPP): Set the current language instead of
	just asserting it, since these macros can be called directly.
	Reported by Raja R. Harinath.

2000-12-19  Pavel Roskin  <proski@gnu.org>

	* doc/autoconf.texi (Installation Directory Variables): More info
	on prefix and exec_prefix.

2000-12-19  Akim Demaille  <akim@epita.fr>
