@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.23.
-.TH AUTORECONF "1" "December 2000" "GNU autoconf 2.49c" FSF
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.24.
+.TH AUTORECONF "1" "January 2001" "GNU autoconf 2.49c" FSF
 .SH NAME
 autoreconf \- Update generated configuration files
 .SH SYNOPSIS
